[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-search"
version = "1.0.0"
description = "Nercone's Search Engine"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Nercone", email = "nercone@diamondgotcat.net" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "rich",
    "nercone-modern",
    "fastapi",
    "uvicorn",
    "requests",
    "markitdown",
    "cachetools",
    "psycopg2-binary",
    "pgvector",
    "torch",
    "numpy",
    "transformers",
    "sentence-transformers"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
nerconesearch = "nercone_search.__main__:main"
